# cutlass-cuda-mlp

./: .gitignore  CMakeLists.txt  datatest  readme.md
include/: activation.h  cuda_run.h  cutlass_matrix.h  dataloader.h  layer.h  matrix.h  mlp.h
model/: mask_model_weight.data
src/: cuda_run.cu  cutlass_matrix.cu  dataloader.cu  layer.cu  main.cu  matrix.cu  mlp.cu
